# on_chain_ally

./: README.md  docker-compose.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: add_langgraph_route.py
backend/app/langgraph/: agent.py  configuration.py  prompt.py  state.py
backend/app/langgraph/tools/: buy_coin.py  get_crypto_price.py  get_historical_chart_data.py  get_trending_coin.py  give_advisor.py  search.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: assistant.tsx  layout.tsx
frontend/components/assistant-ui/: attachment.tsx  thread-list.tsx  thread.tsx
frontend/components/tools/buy-coin/: BuyCoinTool.tsx  buy-coin-form.tsx
frontend/components/tools/historical-chart-data/: HistoricalChartDataTool.tsx  historical-chart-data.tsx
frontend/providers/: CustomRuntimeProvider.tsx
