[project]
name = "backend"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "langchain-community>=0.3.19",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.9",
    "langchain-core>=0.3.41",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "assistant-stream>=0.0.14",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
]
